problems with relative path

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,10 +16,10 @@
 <div class='signature'>
   <div class="logos">
     <a href="https://angular.io/">
-      <img alt="Angular logo" src="./assets/imgs/angular.svg" height="100"></a>
+      <img alt="Angular logo" src="/assets/imgs/angular.svg" height="100"></a>
     <a href="https://visjs.org/">
-      <img alt="Vis.js logo" src="../assets/imgs/visjs_logo.png" height="100"></a>
+      <img alt="Vis.js logo" src="/assets/imgs/visjs_logo.png" height="100"></a>
     <a href="http://vowl.visualdataweb.org/webvowl.html">
-      <img alt="WebVOWL logo" src="../../assets/imgs/webvowl.png" height="70"></a>
+      <img alt="WebVOWL logo" src="/assets/imgs/webvowl.png" height="70"></a>
   </div>
 </div>
