--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,10 @@
 <div id='header'>
   <h1>MO taxonomy demo</h1>
   <div>
-    Click on the timeline's markers to go through the example scenario or click reset to view an extended example of the ontology.
+    Click on the timeline's markers to go through an example scenario.
   </div>
   <p>
-    <button mat-button (click)="resetVis()">Reset</button>
+    <button mat-button (click)="resetVis()">Reload extended example</button>
   </p>
 </div>
 
